comma locations for constructor calls and local variable creations