@@ -14,6 +14,8 @@
 
 package org.e2immu.parser.java;
 
+import org.e2immu.language.cst.api.element.DetailedSources;
+import org.e2immu.language.cst.api.element.Source;
 import org.e2immu.language.cst.api.expression.AnnotationExpression;
 import org.e2immu.language.cst.api.expression.IntConstant;
 import org.e2immu.language.cst.api.expression.StringConstant;
@@ -22,6 +24,8 @@ import org.e2immu.language.cst.api.info.MethodInfo;
 import org.e2immu.language.cst.api.info.TypeInfo;
 import org.intellij.lang.annotations.Language;
 import org.junit.jupiter.api.Test;
+
+import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -32,34 +36,42 @@ public class TestParseAnnotationExpression extends CommonTestParse {
             package a.b;
             @SuppressWarnings(4)
             class C {
-
+            
               @SuppressWarnings
               private static int K = 3;
-
+            
               @SuppressWarnings("on Method")
               void method() {
-
+              }
+              @SuppressWarnings(value = "on Method", x = 3, y = 5)
+              void method2() {
               }
             }
             """;
 
     @Test
     public void test() {
-        TypeInfo typeInfo = parse(INPUT);
-        AnnotationExpression aeType = typeInfo.annotations().get(0);
+        TypeInfo typeInfo = parse(INPUT, true);
+        AnnotationExpression aeType = typeInfo.annotations().getFirst();
         assertSame(runtime.getFullyQualified("java.lang.SuppressWarnings", true), aeType.typeInfo());
-        AnnotationExpression.KV kv0Type = aeType.keyValuePairs().get(0);
+        AnnotationExpression.KV kv0Type = aeType.keyValuePairs().getFirst();
         assertEquals("4", kv0Type.value().toString());
         assertInstanceOf(IntConstant.class, kv0Type.value());
 
         FieldInfo fieldInfo = typeInfo.getFieldByName("K", true);
         assertEquals(1, fieldInfo.annotations().size());
-        assertTrue(fieldInfo.annotations().get(0).keyValuePairs().isEmpty());
+        assertTrue(fieldInfo.annotations().getFirst().keyValuePairs().isEmpty());
 
         MethodInfo method = typeInfo.findUniqueMethod("method", 0);
-        AnnotationExpression aeMethod = method.annotations().get(0);
-        AnnotationExpression.KV kv0 = aeMethod.keyValuePairs().get(0);
+        AnnotationExpression aeMethod = method.annotations().getFirst();
+        AnnotationExpression.KV kv0 = aeMethod.keyValuePairs().getFirst();
         assertEquals("stringConstant@8-21:8-31", kv0.value().toString());
         assertInstanceOf(StringConstant.class, kv0.value());
+
+        MethodInfo method2 = typeInfo.findUniqueMethod("method2", 0);
+        AnnotationExpression aeMethod2 = method2.annotations().getFirst();
+        assertEquals("11-40:11-40, 11-47:11-47",
+                aeMethod2.source().detailedSources().details(DetailedSources.ARGUMENT_COMMAS)
+                .stream().map(Source::compact2).collect(Collectors.joining(", ")));
     }
 }
